[package]
name = "kubernetes-audit-log-explorer"
description = "TUI for viewing Kubernetes Audit Logs"
version = "0.3.0"
edition = "2021"
authors = ["Karl Voss <karl.p.voss@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/karlpvoss/kubernetes-audit-log-explorer"
repository = "https://github.com/karlpvoss/kubernetes-audit-log-explorer"
keywords = ["kubernetes", "audit", "logs", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "kale"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.27", features = ["event-stream", "use-dev-tty"] }
ratatui = "0.29"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
uuid = { version = "1.9", features = ["serde"] }
